# new-a4-simulation

./: .env  .gitignore
scenarios/illegal_fishing/: follow_me.py  follow_me_multiple.py  mission_multiple.py  mission_single.py  mission_with_class.py  start_gazebo.sh  start_planner.sh  startup.sh
scenarios/illegal_fishing/data/: T_Objectives_latlon.xlsx  chungdo_obstacles.gpkg
scenarios/illegal_fishing/missions/: follow_mission.py  generate_trajectory.py  mission.py  surveillance_mission.py  waypoints_mission.py
scenarios/illegal_fishing/surveillance/: vehicle_positions_surveillance.py
scenarios/illegal_fishing/task_planner/: process_task.py  read_objectives.py  solve_task.py
scenarios/illegal_fishing_v2/: send_followme_goal.sh  send_goto_goal.sh  send_rtl_goal.sh  send_search_goal.sh  send_waypoints_goal.sh  start_all.sh  start_gazebo.sh  start_planner.sh
scenarios/illegal_fishing_v2/src/mission_planner/: CMakeLists.txt  TRAJECTORY_README.md  package.xml
scenarios/illegal_fishing_v2/src/mission_planner/data/: T_Objectives.xlsx
scenarios/illegal_fishing_v2/src/mission_planner/include/mission_planner/: enum_helper.hpp  mission_type.hpp  obstacle_aware_trajectory_generator.hpp  task_type.hpp  trajectory_generator.hpp  utils.hpp  vehicle.hpp  vehicle_type.hpp
scenarios/illegal_fishing_v2/src/mission_planner/include/mission_planner/actions/: action.hpp  followme_action.hpp  goto_action.hpp  rtl_action.hpp  search_action.hpp  waypoints_action.hpp
scenarios/illegal_fishing_v2/src/mission_planner/launch/: vehicles.launch.py
scenarios/illegal_fishing_v2/src/mission_planner/scripts/: mission_manager.py  mission_planner_node.py  objectives.py  task_solver.py  vehicle.py
scenarios/illegal_fishing_v2/src/mission_planner/scripts/missions/: exploration.py
scenarios/illegal_fishing_v2/src/mission_planner/src/: mission_planner.cpp  obstacle_aware_trajectory_generator.cpp  trajectory_generator.cpp  vehicle.cpp
scenarios/illegal_fishing_v2/src/mission_planner/src/actions/: action.cpp  followme_action.cpp  goto_action.cpp  rtl_action.cpp  search_action.cpp  waypoints_action.cpp
scenarios/illegal_fishing_v2/src/mission_planner_msgs/: CMakeLists.txt  package.xml
scenarios/illegal_fishing_v2/src/mission_planner_msgs/action/: Followme.action  Goto.action  Search.action  (+2 more)
visualization/: mavsdk_helper.py  server.py
visualization/static/: index copy.html  index.html  style.css
(+4 files in other folders)
